# opensre

./: .pre-commit-config.yaml  Makefile  README.md  SETUP.md  SUPPORT.md  bandit-report.json  pyproject.toml  requirements.txt
.cursor/rules/: code-style.mdc  graph-nodes.mdc  integrations.mdc
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  deploy_pipeline.yml  security-autofix.yml  tracer-demo.yml
app/agent/memory/: architecture_discovery.py
app/cli/wizard/: prompts_test.py
app/integrations/: daily_update.py
app/memories/: 2026-02-16-test_pipeline-prior000.md  2026-02-16-test_pipeline-prior001.md  2026-02-16-test_pipeline-prior002.md
app/nodes/root_cause_diagnosis/: evidence_checker.py  prompt_builder.py
docs/: docs.json
docs-mintlify/: .vale.ini  quickstart-1.mdx  quickstart.mdx
docs/daily-updates/: overview.mdx
opensre/core/: graph.py  runner.py  tools.py
tests/: conftest.py  test_failed_run_investigation.py
tests/test_case_cloudwatch_demo/: use_case.py
tests/test_case_grafana_validation/: grafana_validation.py
tests/test_case_memory_performance/: benchmark_memory.py  test_memory_speed.py
tests/test_case_s3_failed_python_on_linux/: test_orchestrator.py  use_case.py
tests/test_case_superfluid/: test_orchestrator.py  use_case.py
tests/test_case_upstream_apache_flink_ecs/: test_agent_e2e.py
tests/test_case_upstream_downstream_pipeline/: test_agent_e2e.py
tests/test_case_upstream_lambda/: test_agent_e2e.py
tests/test_case_upstream_prefect_ecs_fargate/: conftest.py  test_agent_e2e.py  test_local.py
(+39 files in other folders)
