[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracer-agent-2026"
version = "0.1.0"
description = "Tracer Agent 2026"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
include = ["app*", "config*", "tracer_telemetry*", "tests*"]
